outputs/generated_env/kubernetes/network_policies/cybersim-zone-a-allow-prometheus-to-mongodb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: cyberbattlesim
    cybersim/generated: 'true'
  name: allow-prometheus-to-mongodb
  namespace: cybersim-zone-a
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cybersim-zone-b
      podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:
    - port: 27017
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mongodb
  policyTypes:
  - Ingress
